--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,46 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.calc-container{
+    /* border: 1px solid black; */
+    width: fit-content;
+    margin: 100px auto;
+    box-shadow: 0 0 80px 20px rgba(0,0,0,.45);
+}
+.input-container{
+    /* border: 1px solid salmon; */
+    height: 80px;
+}
+.input-container input{
+    width: 100%;
+    height: 100%;
+    padding: 5px 10px;
+    font-size: 24px;
+    border: none;
+    outline: none;
+}
+.rows{
+    display: flex;
+}
+.colums{
+    border: 1px solid #dfdfdf;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    font-weight: 500;
+    background-color: white;
+}
+.colums img{
+    width: 30px;
+}
+#ans{
+    background-color: #5555FF;
+    border: 1px solid #5555FF;
+    color: white;
+}
 
-/* Your CSS Code here. */
